# FlagEmbedding

./: .gitignore  DATASET_PATH_USAGE.md  DEPENDENCY_UPDATES.md  INSTALLATION.md  LICENSE  QUICK_START.md  README.md  download_CodeConvo.py  download_RFCAlign.py  my_hf_models_upload.py  pyproject.toml  requirements-dev.txt  requirements-eval-all.txt  requirements-eval-core.txt  requirements-finetune.txt  requirements.txt  setup.py
FlagEmbedding/: DATA_PATH_USAGE.md
examples/finetune/embedder/decoder_only/: ft_CodeConvo_decoder.sh  ft_RFCAlign_non-verbose.sh  ft_RFCAlign_verbose.sh
examples/finetune/embedder/encoder_only/: ft_CodeConvo_encoder.sh
