[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "FlagEmbedding"
version = "1.3.5"
description = "FlagEmbedding: Dense Passage Retrieval and Reranking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
keywords = ["embedding", "retrieval", "reranking", "dense-retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.6.0",
    "transformers>=4.44.2",
    "datasets>=2.19.0",
    "accelerate>=0.20.1",
    "sentence_transformers",
    "peft",
    "ir-datasets",
    "sentencepiece",
    "protobuf",
    "numpy",
    "pandas",
    "tqdm",
    "huggingface_hub",
    "regex",
    "packaging"
]

[project.optional-dependencies]
# Fine-tuning support (primary use case)
finetune = [
    "deepspeed",
    "flash-attn"
]

# Evaluation tools (optional - for model validation)
eval = [
    "pytrec_eval",
    "faiss-cpu"
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.10"
]

[tool.setuptools]
packages = ["FlagEmbedding"]

[tool.black]
line-length = 119
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
